# am

./: .gitignore  README.md  pyproject.toml
src/agmd_cli/: add_command.py  cli.py  init_command.py  module_helpers.py  sync_command.py  sync_helpers.py
src/am_cli/: sync_helpers.py
